--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,62 +1,43 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
----
-import { siteConfig } from '@/site-config'
-import '../styles/global.css'
+import "../styles/global.css";
 
 export interface Props {
-	title: string
-	description?: string
-	ogImage?: string | undefined
-	articleDate?: string | undefined
+  title: string;
+  description: string;
+  image?: string;
 }
 
-const { title, description = siteConfig.description, ogImage, articleDate } = Astro.props
-const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-const socialImageURL = new URL(ogImage ? ogImage : '/open-graph.png', Astro.url).href
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const titleSeparator = '•'
-
-const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`
+const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
 ---
 
 <!-- Global Metadata -->
-<meta charset='utf-8' />
-<meta name='viewport' content='width=device-width,initial-scale=1' />
-<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-<meta name='generator' content={Astro.generator} />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
-<link rel='canonical' href={canonicalURL} />
+<link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{siteTitle}</title>
-<meta name='title' content={siteTitle} />
-<meta name='description' content={description} />
-<meta name='author' content={siteConfig.author} />
+<title>{title}</title>
+<meta name="title" content={title} />
+<meta name="description" content={description} />
 
 <!-- Open Graph / Facebook -->
-<meta property='og:type' content={articleDate ? 'article' : 'website'} />
-<meta property='og:url' content={Astro.url} />
-<meta property='og:title' content={title} />
-<meta property='og:description' content={description} />
-<meta property='og:image' content={socialImageURL} />
-{
-	articleDate && (
-		<>
-			<meta property='article:author' content={siteConfig.author} />
-			<meta property='article:published_time' content={articleDate} />
-		</>
-	)
-}
+<meta property="og:type" content="website" />
+<meta property="og:url" content={Astro.url} />
+<meta property="og:title" content={title} />
+<meta property="og:description" content={description} />
+<meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
-<meta property='twitter:card' content='summary_large_image' />
-<meta property='twitter:url' content={Astro.url} />
-<meta property='twitter:title' content={title} />
-<meta property='twitter:description' content={description} />
-<meta property='twitter:image' content={socialImageURL} />
-
-<!-- RSS auto-discovery -->
-<link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content={Astro.url} />
+<meta property="twitter:title" content={title} />
+<meta property="twitter:description" content={description} />
+<meta property="twitter:image" content={new URL(image, Astro.url)} />
